--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.2.0
 attributes:
-  controller.devfile.io/storage-type: per-workspace
+  controller.devfile.io/storage-type: ephemeral
 metadata:
   name: che-demo-app
 projects:
