--- a/devfile.yaml
+++ b/devfile.yaml
@@ -166,7 +166,7 @@ commands:
     workingDir: '/projects/che-demo-app-ui'
   id: node-dev-mode
 - exec:
-    commandLine: '/projects/che-demo-app/setUiEnv.sh -f=/projects/che-demo-app-ui/src/environments/environment.development.ts -s=/projects/che-demo-app-ui/env.dev -c=dev-tools -p=8080 -e=https-quarkus -v=backendApiUrl && npm install && NG_FORCE_TTY=false node --inspect node_modules/.bin/ng serve --disable-host-check --host 0.0.0.0'
+    commandLine: '/projects/che-demo-app/setUiEnv.sh -f=/projects/che-demo-app-ui/src/environments/environment.development.ts -s=/projects/che-demo-app-ui/env.dev -c=dev-tools -p=8080 -e=https-quarkus -v=backendApiUrl && npm install && NG_FORCE_TTY=false ng serve --disable-host-check --host 0.0.0.0'
     component: dev-tools
     hotReloadCapable: true
     group:
